tinycParser.cpp

// Generated from tinyc.g4 by ANTLR 4.7.2


#include "tinycVisitor.h"

#include "tinycParser.h"


using namespace antlrcpp;
using namespace antlr4;

tinycParser::tinycParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

tinycParser::~tinycParser() {
  delete _interpreter;
}

std::string tinycParser::getGrammarFileName() const {
  return "tinyc.g4";
}

const std::vector<std::string>& tinycParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& tinycParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

tinycParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ProgramContext* tinycParser::StartContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}

tree::TerminalNode* tinycParser::StartContext::EOF() {
  return getToken(tinycParser::EOF, 0);
}


size_t tinycParser::StartContext::getRuleIndex() const {
  return tinycParser::RuleStart;
}

antlrcpp::Any tinycParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::StartContext* tinycParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, tinycParser::RuleStart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    program();
    setState(25);
    match(tinycParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

tinycParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::StatementContext* tinycParser::ProgramContext::statement() {
  return getRuleContext<tinycParser::StatementContext>(0);
}

tinycParser::ProgramContext* tinycParser::ProgramContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}


size_t tinycParser::ProgramContext::getRuleIndex() const {
  return tinycParser::RuleProgram;
}

antlrcpp::Any tinycParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::ProgramContext* tinycParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, tinycParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(31);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(27);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(28);
      statement();
      setState(29);
      program();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

tinycParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::DeclContext* tinycParser::StatementContext::decl() {
  return getRuleContext<tinycParser::DeclContext>(0);
}

tinycParser::AssignContext* tinycParser::StatementContext::assign() {
  return getRuleContext<tinycParser::AssignContext>(0);
}

tinycParser::BranchContext* tinycParser::StatementContext::branch() {
  return getRuleContext<tinycParser::BranchContext>(0);
}

tinycParser::LoopContext* tinycParser::StatementContext::loop() {
  return getRuleContext<tinycParser::LoopContext>(0);
}

tinycParser::OutContext* tinycParser::StatementContext::out() {
  return getRuleContext<tinycParser::OutContext>(0);
}


size_t tinycParser::StatementContext::getRuleIndex() const {
  return tinycParser::RuleStatement;
}

antlrcpp::Any tinycParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::StatementContext* tinycParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, tinycParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(44);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tinycParser::T__1: {
        enterOuterAlt(_localctx, 1);
        setState(33);
        decl();
        setState(34);
        match(tinycParser::T__0);
        break;
      }

      case tinycParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(36);
        assign();
        setState(37);
        match(tinycParser::T__0);
        break;
      }

      case tinycParser::T__7: {
        enterOuterAlt(_localctx, 3);
        setState(39);
        branch();
        break;
      }

      case tinycParser::T__11: {
        enterOuterAlt(_localctx, 4);
        setState(40);
        loop();
        break;
      }

      case tinycParser::T__3: {
        enterOuterAlt(_localctx, 5);
        setState(41);
        out();
        setState(42);
        match(tinycParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

tinycParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::DeclContext::ID() {
  return getToken(tinycParser::ID, 0);
}


size_t tinycParser::DeclContext::getRuleIndex() const {
  return tinycParser::RuleDecl;
}

antlrcpp::Any tinycParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::DeclContext* tinycParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 6, tinycParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    match(tinycParser::T__1);
    setState(47);
    match(tinycParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

tinycParser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::AssignContext::ID() {
  return getToken(tinycParser::ID, 0);
}

tinycParser::ExprContext* tinycParser::AssignContext::expr() {
  return getRuleContext<tinycParser::ExprContext>(0);
}


size_t tinycParser::AssignContext::getRuleIndex() const {
  return tinycParser::RuleAssign;
}

antlrcpp::Any tinycParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::AssignContext* tinycParser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 8, tinycParser::RuleAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(tinycParser::ID);
    setState(50);
    match(tinycParser::T__2);
    setState(51);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutContext ------------------------------------------------------------------

tinycParser::OutContext::OutContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::ExprContext* tinycParser::OutContext::expr() {
  return getRuleContext<tinycParser::ExprContext>(0);
}

tree::TerminalNode* tinycParser::OutContext::STRING() {
  return getToken(tinycParser::STRING, 0);
}


size_t tinycParser::OutContext::getRuleIndex() const {
  return tinycParser::RuleOut;
}

antlrcpp::Any tinycParser::OutContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitOut(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::OutContext* tinycParser::out() {
  OutContext *_localctx = _tracker.createInstance<OutContext>(_ctx, getState());
  enterRule(_localctx, 10, tinycParser::RuleOut);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(53);
      match(tinycParser::T__3);
      setState(54);
      match(tinycParser::T__4);
      setState(55);
      expr(0);
      setState(56);
      match(tinycParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(tinycParser::T__3);
      setState(59);
      match(tinycParser::T__4);
      setState(60);
      match(tinycParser::STRING);
      setState(61);
      match(tinycParser::T__5);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

tinycParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t tinycParser::InputContext::getRuleIndex() const {
  return tinycParser::RuleInput;
}

antlrcpp::Any tinycParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::InputContext* tinycParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 12, tinycParser::RuleInput);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(tinycParser::T__6);
    setState(65);
    match(tinycParser::T__4);
    setState(66);
    match(tinycParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BranchContext ------------------------------------------------------------------

tinycParser::BranchContext::BranchContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::GuardContext* tinycParser::BranchContext::guard() {
  return getRuleContext<tinycParser::GuardContext>(0);
}

std::vector<tinycParser::ProgramContext *> tinycParser::BranchContext::program() {
  return getRuleContexts<tinycParser::ProgramContext>();
}

tinycParser::ProgramContext* tinycParser::BranchContext::program(size_t i) {
  return getRuleContext<tinycParser::ProgramContext>(i);
}


size_t tinycParser::BranchContext::getRuleIndex() const {
  return tinycParser::RuleBranch;
}

antlrcpp::Any tinycParser::BranchContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitBranch(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::BranchContext* tinycParser::branch() {
  BranchContext *_localctx = _tracker.createInstance<BranchContext>(_ctx, getState());
  enterRule(_localctx, 14, tinycParser::RuleBranch);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(88);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      match(tinycParser::T__7);
      setState(69);
      match(tinycParser::T__4);
      setState(70);
      guard(0);
      setState(71);
      match(tinycParser::T__5);
      setState(72);
      match(tinycParser::T__8);
      setState(73);
      program();
      setState(74);
      match(tinycParser::T__9);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(76);
      match(tinycParser::T__7);
      setState(77);
      match(tinycParser::T__4);
      setState(78);
      guard(0);
      setState(79);
      match(tinycParser::T__5);
      setState(80);
      match(tinycParser::T__8);
      setState(81);
      program();
      setState(82);
      match(tinycParser::T__9);
      setState(83);
      match(tinycParser::T__10);
      setState(84);
      match(tinycParser::T__8);
      setState(85);
      program();
      setState(86);
      match(tinycParser::T__9);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LoopContext ------------------------------------------------------------------

tinycParser::LoopContext::LoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::GuardContext* tinycParser::LoopContext::guard() {
  return getRuleContext<tinycParser::GuardContext>(0);
}

tinycParser::ProgramContext* tinycParser::LoopContext::program() {
  return getRuleContext<tinycParser::ProgramContext>(0);
}


size_t tinycParser::LoopContext::getRuleIndex() const {
  return tinycParser::RuleLoop;
}

antlrcpp::Any tinycParser::LoopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitLoop(this);
  else
    return visitor->visitChildren(this);
}

tinycParser::LoopContext* tinycParser::loop() {
  LoopContext *_localctx = _tracker.createInstance<LoopContext>(_ctx, getState());
  enterRule(_localctx, 16, tinycParser::RuleLoop);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(tinycParser::T__11);
    setState(91);
    match(tinycParser::T__4);
    setState(92);
    guard(0);
    setState(93);
    match(tinycParser::T__5);
    setState(94);
    match(tinycParser::T__8);
    setState(95);
    program();
    setState(96);
    match(tinycParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

tinycParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tinycParser::ExprContext::NUMBER() {
  return getToken(tinycParser::NUMBER, 0);
}

tree::TerminalNode* tinycParser::ExprContext::ID() {
  return getToken(tinycParser::ID, 0);
}

tinycParser::InputContext* tinycParser::ExprContext::input() {
  return getRuleContext<tinycParser::InputContext>(0);
}

std::vector<tinycParser::ExprContext *> tinycParser::ExprContext::expr() {
  return getRuleContexts<tinycParser::ExprContext>();
}

tinycParser::ExprContext* tinycParser::ExprContext::expr(size_t i) {
  return getRuleContext<tinycParser::ExprContext>(i);
}

tree::TerminalNode* tinycParser::ExprContext::PLUS() {
  return getToken(tinycParser::PLUS, 0);
}

tree::TerminalNode* tinycParser::ExprContext::MINUS() {
  return getToken(tinycParser::MINUS, 0);
}

tree::TerminalNode* tinycParser::ExprContext::TIMES() {
  return getToken(tinycParser::TIMES, 0);
}

tree::TerminalNode* tinycParser::ExprContext::DIV() {
  return getToken(tinycParser::DIV, 0);
}

tree::TerminalNode* tinycParser::ExprContext::MOD() {
  return getToken(tinycParser::MOD, 0);
}


size_t tinycParser::ExprContext::getRuleIndex() const {
  return tinycParser::RuleExpr;
}

antlrcpp::Any tinycParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


tinycParser::ExprContext* tinycParser::expr() {
   return expr(0);
}

tinycParser::ExprContext* tinycParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  tinycParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  tinycParser::ExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, tinycParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tinycParser::NUMBER: {
        setState(99);
        match(tinycParser::NUMBER);
        break;
      }

      case tinycParser::ID: {
        setState(100);
        match(tinycParser::ID);
        break;
      }

      case tinycParser::T__6: {
        setState(101);
        input();
        break;
      }

      case tinycParser::T__4: {
        setState(102);
        match(tinycParser::T__4);
        setState(103);
        expr(0);
        setState(104);
        match(tinycParser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(125);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(123);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(108);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(109);
          match(tinycParser::PLUS);
          setState(110);
          expr(7);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(111);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(112);
          match(tinycParser::MINUS);
          setState(113);
          expr(6);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(114);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(115);
          match(tinycParser::TIMES);
          setState(116);
          expr(5);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(117);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(118);
          match(tinycParser::DIV);
          setState(119);
          expr(4);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(120);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(121);
          match(tinycParser::MOD);
          setState(122);
          expr(3);
          break;
        }

        } 
      }
      setState(127);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- GuardContext ------------------------------------------------------------------

tinycParser::GuardContext::GuardContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tinycParser::RelationContext* tinycParser::GuardContext::relation() {
  return getRuleContext<tinycParser::RelationContext>(0);
}

tree::TerminalNode* tinycParser::GuardContext::NOT() {
  return getToken(tinycParser::NOT, 0);
}

std::vector<tinycParser::GuardContext *> tinycParser::GuardContext::guard() {
  return getRuleContexts<tinycParser::GuardContext>();
}

tinycParser::GuardContext* tinycParser::GuardContext::guard(size_t i) {
  return getRuleContext<tinycParser::GuardContext>(i);
}

tree::TerminalNode* tinycParser::GuardContext::AND() {
  return getToken(tinycParser::AND, 0);
}

tree::TerminalNode* tinycParser::GuardContext::OR() {
  return getToken(tinycParser::OR, 0);
}


size_t tinycParser::GuardContext::getRuleIndex() const {
  return tinycParser::RuleGuard;
}

antlrcpp::Any tinycParser::GuardContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tinycVisitor*>(visitor))
    return parserVisitor->visitGuard(this);
  else
    return visitor->visitChildren(this);
}


tinycParser::GuardContext* tinycParser::guard() {
   return guard(0);
}

tinycParser::GuardContext* tinycParser::guard(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  tinycParser::GuardContext *_localctx = _tracker.createInstance<GuardContext>(_ctx, parentState);
  tinycParser::GuardContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, tinycParser::RuleGuard, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(139);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(129);
      relation();
      break;
    }

    case 2: {
      setState(130);
      match(tinycParser::NOT);
      setState(131);
      match(tinycParser::T__4);
      setState(132);
      guard(0);
      setState(133);
      match(tinycParser::T__5);
      break;
    }

    case 3: {
      setState(135);
      match(tinycParser::T__4);
      setState(136);
      guard(0);
      setState(137);
      match(tinycParser::T__5);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(149);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(147);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<GuardContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleGuard);
          setState(141);
